fix images on iphones

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -429,8 +429,6 @@
     }
 
     .fl {
-      height: 30px;
-      width: auto;
       margin: auto !important;
       padding: auto !important;
     }
